# crawlie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/.claude/: launch.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate.py  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: UpdateBanner.tsx  charts.tsx  ui.tsx
apps/desktop/src/lib/: api.ts  crawl-defaults.ts  demo.ts  format.ts  priority.ts  rules.json  rules.ts  theme.ts  types.ts
apps/desktop/src/styles/: app.css  tokens.css
apps/desktop/src/views/: CrawlingView.tsx  LinkGraphView.tsx  ReportsView.tsx  ResultsView.tsx  SettingsView.tsx  StartView.tsx
apps/website/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
apps/website/api/: subscribe.ts
apps/website/public/: llms.txt  robots.txt
apps/website/scripts/: sync-changelog.mjs
apps/website/src/: content.config.ts
apps/website/src/components/: AsciiBackground.astro  AuthorBio.astro  BrandLockup.astro  BrandMark.astro  LegalToc.astro  PixelGridBackground.astro  SiteFooter.astro  SiteHeader.astro  SubscribeForm.astro
apps/website/src/content/changelog/: 0.1.1.md  0.2.0.md  0.2.1.md  0.3.0.md  0.4.0.md  0.4.1.md  0.4.2.md  0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md
apps/website/src/content/docs/: changelog.md  checks.md  ci.md  cli.md  custom-extraction.md  desktop.md  getting-started.md  mcp.md  rules.md  scoring.md  skills-and-plugin.md
apps/website/src/data/: author.ts  compare.ts
apps/website/src/layouts/: BaseLayout.astro  DocsLayout.astro
apps/website/src/pages/: ai-prompt-library.astro  index.astro
apps/website/src/pages/changelog/: [slug].astro  index.astro
apps/website/src/pages/compare/: [slug].astro  index.astro
apps/website/src/pages/docs/: [...slug].astro
apps/website/src/pages/legal/: index.astro  privacy.astro  terms.astro
apps/website/src/styles/: global.css  prose.css
crates/crawlie-cli/: Cargo.toml
crates/crawlie-cli/src/: main.rs  update.rs
crates/crawlie-core/: Cargo.toml
crates/crawlie-core/src/: crawler.rs  fetch.rs  knowledge.rs  lib.rs  pagestore.rs  parse.rs  priority.rs  render.rs  report.rs  report_html.rs  robots.rs  scoring.rs  sitemap.rs  structured_data.rs  timefmt.rs  types.rs
crates/crawlie-core/src/audit/: mod.rs
crates/crawlie-core/tests/: engine.rs  streaming.rs
crates/crawlie-mcp/: Cargo.toml
crates/crawlie-mcp/src/: main.rs
crates/crawlie-rules/: Cargo.toml  README.md
crates/crawlie-rules/packs/: slop-default.crawlie
crates/crawlie-rules/src/: lib.rs  pack.rs  parse.rs  resolve.rs  rule.rs  slop.rs  text.rs
npm/: README.md  install.js  package.json  resolve.js
skills/: README.md
skills/fix-broken-links/: SKILL.md
skills/geo-ai-readiness/: SKILL.md
skills/pre-launch-seo-check/: SKILL.md
skills/seo-site-audit/: SKILL.md
videos/crawlie-launch/: DESIGN.md  index.html  meta.json  package.json
videos/crawlie-launch/.hyperframes/backup/: 2026-06-18T23-38-26-947Z-aW5kZXguaHRtbA  2026-06-18T23-38-31-537Z-aW5kZXguaHRtbA  2026-06-18T23-38-51-950Z-aW5kZXguaHRtbA  2026-06-18T23-38-56-855Z-aW5kZXguaHRtbA  2026-06-18T23-38-58-048Z-aW5kZXguaHRtbA  2026-06-18T23-39-02-540Z-aW5kZXguaHRtbA  2026-06-18T23-39-07-818Z-aW5kZXguaHRtbA  2026-06-18T23-39-10-214Z-aW5kZXguaHRtbA  2026-06-18T23-39-16-197Z-aW5kZXguaHRtbA  2026-06-18T23-39-59-699Z-aW5kZXguaHRtbA
videos/crawlie-launch/.waveform-cache/: v2_solarflex-melodic-type-beat-trap-type-beats-541553.mp3.json
videos/crawlie-launch/renders/: crawlie-launch_2026-06-18_00-33-50.meta.json  crawlie-launch_2026-06-18_00-40-11.meta.json
