[package]
name = "crawlie-desktop"
description = "crawlie desktop app — fast OSS technical SEO crawler by Spronta."
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "crawlie_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
crawlie-core = { path = "../../../crates/crawlie-core" }

# Stand alone from the root cargo workspace so root builds stay lean.
[workspace]
