[package]
name = "crawlie-desktop"
description = "crawlie desktop app — fast OSS technical SEO crawler."
version = "0.5.1"
edition = "2021"
license = "MIT"

[lib]
name = "crawlie_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
crawlie-core = { path = "../../../crates/crawlie-core", features = ["render"] }

# Stand alone from the root cargo workspace so root builds stay lean.
[workspace]
